--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="myscripts.js"></script>
 </head>
 <body>
-	<h1>Imitation generator</h1>
+	<h1>Imi generator</h1>
 <script type="text/javascript" src="script.js">
 	</script>
 </body>
