--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Imi generator</h1>
+	<h2>New background</h2>
 <script type="text/javascript" src="script.js">
 	</script>
 </body>
